--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
     text-align: center;
-    background: url('istockphoto-1265178300-1024x1024.jpg') no-repeat center center;
+    background: url('background.jpg') no-repeat center center;
     background-size: cover;
     overflow: hidden;
 }
@@ -26,13 +26,13 @@ body {
     bottom: 40px;
     left: 50%;
     transform: translateX(-50%);
-    font-size: 50px;
-    transition: all 0.5s ease;
+    font-size: 60px;
+    transition: all 0.7s ease;
 }
 
 .coin {
     position: absolute;
-    font-size: 40px;
+    font-size: 50px;
     cursor: pointer;
     transition: transform 0.2s;
 }
@@ -45,48 +45,73 @@ body {
     position: absolute;
     top: 20px;
     width: 100%;
-    font-size: 22px;
+    font-size: 24px;
     font-weight: bold;
     color: white;
     text-shadow: 2px 2px 4px black;
 }
+
+.wrong-mark {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 120px;
+    color: red;
+    display: none;
+    animation: pop 0.4s ease;
+}
+
+.flag {
+    position: absolute;
+    top: 80px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 100px;
+    display: none;
+    animation: popFlag 0.6s ease;
+}
+
+@keyframes pop {
+    0% { transform: translate(-50%, -50%) scale(0); }
+    100% { transform: translate(-50%, -50%) scale(1); }
+}
+
+@keyframes popFlag {
+    0% { transform: translateX(-50%) scale(0); }
+    100% { transform: translateX(-50%) scale(1); }
+}
 </style>
 </head>
+
 <body>
 
 <div class="game-area">
 
     <div class="info" id="info">Level 1</div>
-
     <div class="character" id="character">🚶</div>
+    <div class="wrong-mark" id="wrongMark">❌</div>
+    <div class="flag" id="flag">🏁</div>
 
-    <!-- KOIN KIRI -->
-    <div class="coin" style="top:120px; left:25%;" onclick="choose('left',1)">🪙</div>
-    <div class="coin" style="top:200px; left:25%;" onclick="choose('left',2)">🪙</div>
-    <div class="coin" style="top:280px; left:25%;" onclick="choose('left',3)">🪙</div>
-    <div class="coin" style="top:360px; left:25%;" onclick="choose('left',4)">🪙</div>
-    <div class="coin" style="top:440px; left:25%;" onclick="choose('left',5)">🪙</div>
+    <!-- 5 KOIN KIRI -->
+    <div class="coin" style="top:120px; left:25%;" onclick="choose(this,'left',1)">🪙</div>
+    <div class="coin" style="top:200px; left:25%;" onclick="choose(this,'left',2)">🪙</div>
+    <div class="coin" style="top:280px; left:25%;" onclick="choose(this,'left',3)">🪙</div>
+    <div class="coin" style="top:360px; left:25%;" onclick="choose(this,'left',4)">🪙</div>
+    <div class="coin" style="top:440px; left:25%;" onclick="choose(this,'left',5)">🪙</div>
 
-    <!-- KOIN KANAN -->
-    <div class="coin" style="top:120px; right:25%;" onclick="choose('right',1)">🪙</div>
-    <div class="coin" style="top:200px; right:25%;" onclick="choose('right',2)">🪙</div>
-    <div class="coin" style="top:280px; right:25%;" onclick="choose('right',3)">🪙</div>
-    <div class="coin" style="top:360px; right:25%;" onclick="choose('right',4)">🪙</div>
-    <div class="coin" style="top:440px; right:25%;" onclick="choose('right',5)">🪙</div>
+    <!-- 5 KOIN KANAN -->
+    <div class="coin" style="top:120px; right:25%;" onclick="choose(this,'right',1)">🪙</div>
+    <div class="coin" style="top:200px; right:25%;" onclick="choose(this,'right',2)">🪙</div>
+    <div class="coin" style="top:280px; right:25%;" onclick="choose(this,'right',3)">🪙</div>
+    <div class="coin" style="top:360px; right:25%;" onclick="choose(this,'right',4)">🪙</div>
+    <div class="coin" style="top:440px; right:25%;" onclick="choose(this,'right',5)">🪙</div>
 
 </div>
 
 <script>
 let currentLevel = 1;
 
-/* 
-   POLA JAWABAN:
-   Level 1 = kiri
-   Level 2 = kanan
-   Level 3 = kiri
-   Level 4 = kanan
-   Level 5 = kiri
-*/
 const correctPattern = {
     1: "left",
     2: "right",
@@ -95,38 +120,52 @@ const correctPattern = {
     5: "left"
 };
 
-function choose(side, level) {
+function choose(element, side, level) {
 
     if (level !== currentLevel) return;
 
     const character = document.getElementById("character");
+    const wrongMark = document.getElementById("wrongMark");
+    const flag = document.getElementById("flag");
+
+    const rect = element.getBoundingClientRect();
+    const parentRect = document.querySelector(".game-area").getBoundingClientRect();
+
+    const targetX = rect.left - parentRect.left + rect.width / 2;
+    const targetY = parentRect.height - rect.top - 20;
 
     if (side === correctPattern[currentLevel]) {
 
-        // Pindahkan karakter
-        if (side === "left") {
-            character.style.left = "25%";
-        } else {
-            character.style.left = "75%";
-        }
+        character.style.left = targetX + "px";
+        character.style.bottom = targetY + "px";
 
         setTimeout(() => {
             currentLevel++;
 
             if (currentLevel > 5) {
+
                 document.getElementById("info").innerHTML = "🎉 SELAMAT MENANG!";
-                alert("Kamu berhasil menyelesaikan semua level!");
-                restartGame();
+                flag.style.display = "block";
+
+                setTimeout(() => {
+                    restartGame();
+                    flag.style.display = "none";
+                }, 2000);
+
             } else {
                 document.getElementById("info").innerHTML = "Level " + currentLevel;
-                character.style.left = "50%";
             }
-        }, 500);
+
+        }, 700);
 
     } else {
 
-        alert("❌ Salah! Ulang dari awal.");
-        restartGame();
+        wrongMark.style.display = "block";
+
+        setTimeout(() => {
+            wrongMark.style.display = "none";
+            restartGame();
+        }, 1000);
     }
 }
 
@@ -134,6 +173,7 @@ function restartGame() {
     currentLevel = 1;
     document.getElementById("info").innerHTML = "Level 1";
     document.getElementById("character").style.left = "50%";
+    document.getElementById("character").style.bottom = "40px";
 }
 </script>
 
