--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Game Koin 5 Level</title>
+<title>Game Gold Bar Premium</title>
 
 <style>
 body {
@@ -21,6 +21,7 @@ body {
     height: 100vh;
 }
 
+/* KARAKTER DI DEPAN */
 .character {
     position: absolute;
     bottom: 40px;
@@ -28,6 +29,7 @@ body {
     transform: translateX(-50%);
     font-size: 60px;
     transition: all 0.7s ease;
+    z-index: 20;
 }
 
 .info {
@@ -37,36 +39,102 @@ body {
     font-size: 24px;
     font-weight: bold;
     color: white;
-    text-shadow: 2px 2px 4px black;
+    text-shadow: 2px 2px 6px black;
 }
 
-/* ========================= */
-/* KOIN EMAS TIMBUL 3D */
-/* ========================= */
+/* ========================== */
+/* GOLD BAR SUPER REALISTIS */
+/* ========================== */
 .coin {
     position: absolute;
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
+    width: 120px;
+    height: 60px;
     cursor: pointer;
+    border-radius: 10px;
+    overflow: hidden;
 
-    background: radial-gradient(circle at 30% 30%, #fff9c4, #fbc02d, #f57f17);
-    border: 3px solid #e65100;
+    background: linear-gradient(
+        145deg,
+        #fff9c4 0%,
+        #ffd700 30%,
+        #fbc02d 50%,
+        #e6ac00 70%,
+        #b8860b 100%
+    );
+
+    border: 2px solid #8b6508;
 
     box-shadow:
-        inset 0 6px 10px rgba(255,255,255,0.8),
-        inset 0 -6px 10px rgba(0,0,0,0.4),
-        0 8px 12px rgba(0,0,0,0.5);
+        inset -8px -8px 15px rgba(0,0,0,0.4),
+        inset 8px 8px 15px rgba(255,255,255,0.6),
+        0 10px 20px rgba(0,0,0,0.6);
 
-    transition: 0.2s;
+    transition: 0.3s;
+}
+
+/* Tulisan emas emboss */
+.coin::after {
+    content: "999.9 FINE GOLD";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 12px;
+    font-weight: bold;
+    color: #8b5a00;
+    text-shadow:
+        1px 1px 1px rgba(255,255,255,0.7),
+        -1px -1px 1px rgba(0,0,0,0.3);
+}
+
+/* Efek kilau menyapu */
+.coin::before {
+    content: "";
+    position: absolute;
+    top: -50%;
+    left: -75%;
+    width: 200%;
+    height: 200%;
+    background: linear-gradient(
+        120deg,
+        rgba(255,255,255,0) 30%,
+        rgba(255,255,255,0.8) 50%,
+        rgba(255,255,255,0) 70%
+    );
+    transform: rotate(25deg);
+    animation: shine 4s infinite;
+}
+
+@keyframes shine {
+    0% { left: -150%; }
+    100% { left: 150%; }
+}
+
+.coin:hover {
+    transform: scale(1.08);
+    box-shadow:
+        inset -8px -8px 15px rgba(0,0,0,0.4),
+        inset 8px 8px 15px rgba(255,255,255,0.6),
+        0 0 25px gold;
 }
 
 .coin:active {
-    transform: translateY(4px);
-    box-shadow:
-        inset 0 3px 6px rgba(255,255,255,0.6),
-        inset 0 -3px 6px rgba(0,0,0,0.4),
-        0 4px 6px rgba(0,0,0,0.5);
+    transform: translateY(5px);
+}
+
+/* Efek kilat saat benar */
+.sparkle {
+    position: absolute;
+    font-size: 50px;
+    color: gold;
+    animation: sparkle 0.8s ease forwards;
+    pointer-events: none;
+    z-index: 30;
+}
+
+@keyframes sparkle {
+    0% { transform: scale(0); opacity: 1; }
+    100% { transform: scale(2); opacity: 0; }
 }
 
 /* Salah */
@@ -78,7 +146,7 @@ body {
     font-size: 120px;
     color: red;
     display: none;
-    animation: pop 0.4s ease;
+    z-index: 40;
 }
 
 /* Bendera */
@@ -89,17 +157,7 @@ body {
     transform: translateX(-50%);
     font-size: 100px;
     display: none;
-    animation: popFlag 0.6s ease;
-}
-
-@keyframes pop {
-    0% { transform: translate(-50%, -50%) scale(0); }
-    100% { transform: translate(-50%, -50%) scale(1); }
-}
-
-@keyframes popFlag {
-    0% { transform: translateX(-50%) scale(0); }
-    100% { transform: translateX(-50%) scale(1); }
+    z-index: 40;
 }
 </style>
 </head>
@@ -108,30 +166,28 @@ body {
 
 <div class="game-area">
 
-    <div class="info" id="info">Level 1</div>
-    <div class="character" id="character">🚶</div>
-    <div class="wrong-mark" id="wrongMark">❌</div>
-    <div class="flag" id="flag">🏁</div>
+<div class="info" id="info">Level 1</div>
+<div class="character" id="character">🚶</div>
+<div class="wrong-mark" id="wrongMark">❌</div>
+<div class="flag" id="flag">🏁</div>
 
-    <!-- ===================== -->
-    <!-- LEVEL DIBALIK -->
-    <!-- 1 PALING BAWAH -->
-    <!-- 5 PALING ATAS -->
-    <!-- ===================== -->
+<!-- LEVEL DIBALIK -->
+<!-- Level 1 paling bawah -->
+<!-- Level 5 paling atas -->
 
-    <!-- KIRI -->
-    <div class="coin" style="top:440px; left:25%;" onclick="choose(this,'left',1)"></div>
-    <div class="coin" style="top:360px; left:25%;" onclick="choose(this,'left',2)"></div>
-    <div class="coin" style="top:280px; left:25%;" onclick="choose(this,'left',3)"></div>
-    <div class="coin" style="top:200px; left:25%;" onclick="choose(this,'left',4)"></div>
-    <div class="coin" style="top:120px; left:25%;" onclick="choose(this,'left',5)"></div>
+<!-- KIRI -->
+<div class="coin" style="top:440px; left:25%;" onclick="choose(this,'left',1)"></div>
+<div class="coin" style="top:360px; left:25%;" onclick="choose(this,'left',2)"></div>
+<div class="coin" style="top:280px; left:25%;" onclick="choose(this,'left',3)"></div>
+<div class="coin" style="top:200px; left:25%;" onclick="choose(this,'left',4)"></div>
+<div class="coin" style="top:120px; left:25%;" onclick="choose(this,'left',5)"></div>
 
-    <!-- KANAN -->
-    <div class="coin" style="top:440px; right:25%;" onclick="choose(this,'right',1)"></div>
-    <div class="coin" style="top:360px; right:25%;" onclick="choose(this,'right',2)"></div>
-    <div class="coin" style="top:280px; right:25%;" onclick="choose(this,'right',3)"></div>
-    <div class="coin" style="top:200px; right:25%;" onclick="choose(this,'right',4)"></div>
-    <div class="coin" style="top:120px; right:25%;" onclick="choose(this,'right',5)"></div>
+<!-- KANAN -->
+<div class="coin" style="top:440px; right:25%;" onclick="choose(this,'right',1)"></div>
+<div class="coin" style="top:360px; right:25%;" onclick="choose(this,'right',2)"></div>
+<div class="coin" style="top:280px; right:25%;" onclick="choose(this,'right',3)"></div>
+<div class="coin" style="top:200px; right:25%;" onclick="choose(this,'right',4)"></div>
+<div class="coin" style="top:120px; right:25%;" onclick="choose(this,'right',5)"></div>
 
 </div>
 
@@ -139,67 +195,75 @@ body {
 let currentLevel = 1;
 
 const correctPattern = {
-    1: "left",
-    2: "right",
-    3: "left",
-    4: "right",
-    5: "left"
+1: "left",
+2: "right",
+3: "left",
+4: "right",
+5: "left"
 };
 
 function choose(element, side, level) {
 
-    if (level !== currentLevel) return;
+if (level !== currentLevel) return;
 
-    const character = document.getElementById("character");
-    const wrongMark = document.getElementById("wrongMark");
-    const flag = document.getElementById("flag");
+const character = document.getElementById("character");
+const wrongMark = document.getElementById("wrongMark");
+const flag = document.getElementById("flag");
 
-    const rect = element.getBoundingClientRect();
-    const parentRect = document.querySelector(".game-area").getBoundingClientRect();
+const rect = element.getBoundingClientRect();
+const parentRect = document.querySelector(".game-area").getBoundingClientRect();
 
-    const targetX = rect.left - parentRect.left + rect.width / 2;
-    const targetY = parentRect.height - rect.top - 20;
+const targetX = rect.left - parentRect.left + rect.width / 2;
+const targetY = parentRect.height - rect.top - 20;
 
-    if (side === correctPattern[currentLevel]) {
+if (side === correctPattern[currentLevel]) {
 
-        character.style.left = targetX + "px";
-        character.style.bottom = targetY + "px";
+character.style.left = targetX + "px";
+character.style.bottom = targetY + "px";
 
-        setTimeout(() => {
-            currentLevel++;
+/* efek sparkle */
+let sparkle = document.createElement("div");
+sparkle.className = "sparkle";
+sparkle.innerHTML = "✨";
+sparkle.style.left = targetX + "px";
+sparkle.style.bottom = targetY + "px";
+document.querySelector(".game-area").appendChild(sparkle);
 
-            if (currentLevel > 5) {
+setTimeout(()=> sparkle.remove(),800);
 
-                document.getElementById("info").innerHTML = "🎉 SELAMAT MENANG!";
-                flag.style.display = "block";
+setTimeout(() => {
+currentLevel++;
 
-                setTimeout(() => {
-                    restartGame();
-                    flag.style.display = "none";
-                }, 2000);
+if (currentLevel > 5) {
+document.getElementById("info").innerHTML = "🎉 SELAMAT MENANG!";
+flag.style.display = "block";
 
-            } else {
-                document.getElementById("info").innerHTML = "Level " + currentLevel;
-            }
+setTimeout(() => {
+restartGame();
+flag.style.display = "none";
+}, 2000);
 
-        }, 700);
+} else {
+document.getElementById("info").innerHTML = "Level " + currentLevel;
+}
+}, 700);
 
-    } else {
+} else {
 
-        wrongMark.style.display = "block";
+wrongMark.style.display = "block";
 
-        setTimeout(() => {
-            wrongMark.style.display = "none";
-            restartGame();
-        }, 1000);
-    }
+setTimeout(() => {
+wrongMark.style.display = "none";
+restartGame();
+}, 1000);
+}
 }
 
 function restartGame() {
-    currentLevel = 1;
-    document.getElementById("info").innerHTML = "Level 1";
-    document.getElementById("character").style.left = "50%";
-    document.getElementById("character").style.bottom = "40px";
+currentLevel = 1;
+document.getElementById("info").innerHTML = "Level 1";
+document.getElementById("character").style.left = "50%";
+document.getElementById("character").style.bottom = "40px";
 }
 </script>
 
