--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ body {
 <div class="final-message" id="finalMessage">
 🎉 SELAMAT MENANG! <br>
 Silahkan isi link google form berikut:<br>
-<a href="https://forms.google.com" target="_blank">Isi Google Form</a>
+<a href="https://forms.gle/jc1K8x3MxSMiNZn39" target="_blank">Isi Google Form</a>
 </div>
 
 <!-- LEVEL 1–5 -->
